Wrong manipulator behaviour in individual origin. #43708

Closed
opened 2015-02-17 12:17:23 +01:00 by Francesco Pizzo · 12 comments

System Information
Windows 7 pro, phenomx6 1090t, GTX580 3gb

Blender Version
Broken: 2.73a hash:bbf09d9
Worked: 2.69 (not sure about)

Short description of error
When the manipulator transform orientation are on Normal and pivot center is set to Individual Origin if I press on manipulator the movement follow the global coordinate and not on{F144233} Normal.

Exact steps for others to reproduce the error
Attached a file, simply press manipulator handle to see the problem.

**System Information** Windows 7 pro, phenomx6 1090t, GTX580 3gb **Blender Version** Broken: 2.73a hash:bbf09d9 Worked: 2.69 (not sure about) **Short description of error** When the manipulator transform orientation are on Normal and pivot center is set to Individual Origin if I press on manipulator the movement follow the global coordinate and not on{[F144233](https://archive.blender.org/developer/F144233/test.zip)} Normal. **Exact steps for others to reproduce the error** Attached a file, simply press manipulator handle to see the problem.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jholen

Added subscriber: @jholen

Added subscriber: @zeauro

Added subscriber: @zeauro

I see no bug, here.

Movement follows global axis because what is selected have its normal axis following global axis.

I see no bug, here. Movement follows global axis because what is selected have its normal axis following global axis.

Hi,
thanks for your reply. if I press on the Y axis handle (the green one) the selected components move not on the direction indicated by the manipulator (y axis is normal position regards the edge), but follow global y coordinate, like you can see in the attached pictures.

Thanks
Francesco

axis2.jpg

axis.jpg

Hi, thanks for your reply. if I press on the Y axis handle (the green one) the selected components move not on the direction indicated by the manipulator (y axis is normal position regards the edge), but follow global y coordinate, like you can see in the attached pictures. Thanks Francesco ![axis2.jpg](https://archive.blender.org/developer/F144271/axis2.jpg) ![axis.jpg](https://archive.blender.org/developer/F144272/axis.jpg)

OK, thanks for completion.

I confirm a bug or at least a confusing display. But it is not related to global coordinates.

Interest of "Individual Origins" pivot is to move more than one element at a time.
In the case of a selection of multiple edges, we don't take too much attention to manipulator orientation, axis indication; because each edge will follow a different orientation (its own normal orientation).

If we change pivot point to "Active Element", manipulator orientation changes. Z and Y axis are inverted.

With "Individual Origins" pivot, manipulator axis are displayed like with "Median" point pivot but they are acting like with "Active Element" pivot.

It appears here, that it is inconsistent when only one edge is selected or two vertices.
There is not problem with 3 vertices or one face selected.

OK, thanks for completion. I confirm a bug or at least a confusing display. But it is not related to global coordinates. Interest of "Individual Origins" pivot is to move more than one element at a time. In the case of a selection of multiple edges, we don't take too much attention to manipulator orientation, axis indication; because each edge will follow a different orientation (its own normal orientation). If we change pivot point to "Active Element", manipulator orientation changes. Z and Y axis are inverted. With "Individual Origins" pivot, manipulator axis are displayed like with "Median" point pivot but they are acting like with "Active Element" pivot. It appears here, that it is inconsistent when only one edge is selected or two vertices. There is not problem with 3 vertices or one face selected.
Member

Added subscribers: @ideasman42, @JulianEisel

Added subscribers: @ideasman42, @JulianEisel
Member

Hmm it's a bit difficult to understand how this is intended to work and AFAIK the code underneath is considered to be pretty weak :/ @ideasman42 may know more again ;)

Hmm it's a bit difficult to understand how this is intended to work and AFAIK the code underneath is considered to be pretty weak :/ @ideasman42 may know more again ;)
Campbell Barton self-assigned this 2015-02-17 19:18:13 +01:00

As far as I can see, its all working fine, theres just an axis swap with the manipulator drawing when a single edge is selected (but behavior is correct).

As far as I can see, its all working fine, theres just an axis swap with the manipulator drawing when a single edge is selected (but behavior is correct).

This issue was referenced by 9d879c43f3

This issue was referenced by 9d879c43f351a0a10fb7613fef1d0fe01a153f15

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9d879c43f3.

Closed by commit 9d879c43f3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43708
No description provided.