Fix T43708: Wrong manipulator in individual origin

Manipulator and actual behavior were out-of-sync with a single edge selected.